RESOLVED FIXED307654
[Site Isolation] Fix datalist picker for cross-origin iframes
https://bugs.webkit.org/show_bug.cgi?id=307654
Summary [Site Isolation] Fix datalist picker for cross-origin iframes
zak ridouh
Reported 2026-02-11 23:48:25 PST
When site isolation is enabled, cross-origin iframes run in separate WebContent processes. The datalist picker was sending responses (didSelectDataListOption, didCloseSuggestions) only to the main process, which would fail to update the input element in the iframe's process. Fix this.
Attachments
zak ridouh
Comment 1 2026-02-11 23:48:47 PST
zak ridouh
Comment 2 2026-02-11 23:55:07 PST
EWS
Comment 3 2026-03-10 22:20:54 PDT
Committed 309034@main (dae6ae8ca62b): <https://commits.webkit.org/309034@main> Reviewed commits have been landed. Closing PR #58488 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.