Source/WebCore/html/TextFieldInputType.cpp
@@ -925,6 +925,17 @@ IntRect TextFieldInputType::elementRectInRootViewCoordinates() const
     return protect(element->document().view())->contentsToRootView(protect(element->renderer())->absoluteBoundingBoxRect());
 }
 
+std::optional<FrameIdentifier> TextFieldInputType::rootFrameID() const
+{
+    RefPtr element = this->element();
+    if (!element)
+        return std::nullopt;
+    RefPtr view = element->document().view();
+    if (!view)
+        return std::nullopt;
+    return view->rootFrameID();
+}
+
 Vector<DataListSuggestion> TextFieldInputType::suggestions()
 {
     // FIXME: Suggestions are "typing completions" and so should probably use the findPlainText algorithm rather than the simplistic "ignoring ASCII case" rules.
